--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "lodash.get": "^4.4.2",
     "node-sass": "^4.12.0",
     "renderjson": "^1.4.0",
-    "toml": "^3.0.0",
     "sass-loader": "^7.2.0",
-    "stellar-sdk": "^2.1.1"
+    "stellar-sdk": "^5",
+    "toml": "^3.0.0"
   },
   "husky": {
     "hooks": {
